added some shared css classes and added JSON data.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="container-content item-with-bg">
-                    <ul id="playlist-songs" class="list-in-container playlist-ul playbar-listener">
+                    <ul id="playlist-songs" class="list-in-container playlist-ul playbar-listener fx-fade-in fx-magnify">
                         <!-- Following Template Code injected here using 'html-templates-indexPage.js' -->
                     </ul>
                         <!-- Template code which is injected above by 'html-templates-indexPage.js' -->
@@ -92,7 +92,7 @@
         <!-- Start of MAIN-BODY -->
 
         <!-- Start of Carousel Again -->
-        <div class="carousel-container translucent-bg-100 item-with-bg">
+        <div class="carousel-container translucent-bg-100 item-with-bg fx-fade-in fx-magnify">
             <button class="carousel_button carousel_button-prev is-hidden">
                 &#10094;
             </button>
@@ -119,7 +119,7 @@
         <!-- End of Carousel Again -->
 
 
-        <div id="favorites-container" class="favorites-container translucent-bg-100 item-with-bg">
+        <div id="favorites-container" class="favorites-container translucent-bg-100 item-with-bg fx-fade-in fx-magnify">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
             <div class="container-heading">Favorites</div>
             <div class="container-content">
@@ -146,7 +146,7 @@
                         </template>
                 </div>
 
-                <div class="translucent-bg-100 item-with-bg">
+                <div class="translucent-bg-100 item-with-bg fx-fade-in fx-magnify">
                     <div class="favourite-item-heading">Artists</div>
                     <ul class="favorite-list artist-listener" id="ul-fav-artists">
                         <!-- Following Template Code injected here using 'html-templates-indexPage.js' -->
@@ -167,7 +167,7 @@
                         </template>
                 </div>
 
-                <div class="translucent-bg-100 item-with-bg">
+                <div class="translucent-bg-100 item-with-bg fx-fade-in fx-magnify">
                     <div class="favourite-item-heading">Genres</div>
                     <ul class="favorite-list" id ="ul-fav-genres">
                         <!-- Following Template Code injected here using 'html-templates-indexPage.js' -->
@@ -186,7 +186,7 @@
                         </template>
                 </div>
 
-                <div class="translucent-bg-100 item-with-bg">
+                <div class="translucent-bg-100 item-with-bg fx-fade-in fx-magnify">
                     <div class="favourite-item-heading">Radios</div>
                     <ul class="favorite-list" id="ul-fav-radios">
                     <!-- Following Template Code injected here using 'html-templates-indexPage.js' -->
@@ -207,7 +207,7 @@
             </div>
         </div>
 
-        <div id="latest-releases-container" class="latest-releases-container translucent-bg-100 item-with-bg playbar-listener">
+        <div id="latest-releases-container" class="latest-releases-container translucent-bg-100 item-with-bg playbar-listener fx-fade-in fx-magnify">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
             <div class="container-heading">Latest Releases</div>
             <div class="container-content translucent-bg-100  item-with-bg">
@@ -235,7 +235,7 @@
             </div>
         </div>
 
-        <div id="artists-container" class="artists-container translucent-bg-100 item-with-bg artist-listener">
+        <div id="artists-container" class="artists-container translucent-bg-100 item-with-bg artist-listener fx-fade-in fx-magnify">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
             <div class="container-heading">Popular Artists</div>
             <div class="container-content item-with-bg">
@@ -261,7 +261,7 @@
             </div>
         </div>
 
-        <div id="genres-container" class="genres-container translucent-bg-100 item-with-bg">
+        <div id="genres-container" class="genres-container translucent-bg-100 item-with-bg fx-fade-in fx-magnify">
             <div class="container-heading">Popular Genres</div>
             <div class="container-content item-with-bg">
                 <ul class="list-in-container" id="ul-genres">
@@ -283,7 +283,7 @@
                     </template>
             </div>
         </div>
-        <div id="radios-container" class="radios-container translucent-bg-100 item-with-bg">
+        <div id="radios-container" class="radios-container translucent-bg-100 item-with-bg fx-fade-in fx-magnify">
             <div class="container-heading">Popular Radio Stations</div>
             <div class="container-content item-with-bg">
                 <ul class="list-in-container" id="ul-radios">
