created a shared css, separate from index and artist css files, and Comments added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- CSS imports -->
         <link href="styles/shared.css" rel="stylesheet" />
+        <link href="styles/index.css" rel="stylesheet" />
 
         <!-- FONTAWESOME Icons Import-->
         <script
